# window-navigator

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  dump_tab_props.py  pack.sh  pyproject.toml  setup.sh  start.bat
.claude/: settings.json
.claude/commands/: test-python.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
go/: CLAUDE.md  app.manifest  go.mod  main.go  rsrc.syso
go/internal/navigator/: activation_windows.go  app.go  app_stub.go  app_windows.go  controller.go  controller_test.go  debug_stub.go  debug_windows.go  filter.go  filter_test.go  models.go  overlay.go  overlay_stub.go  overlay_windows.go  provider.go  provider_test.go  provider_windows.go  tabs.go  tabs_stub.go  tabs_test.go  tabs_windows.go  theme.go  theme_test.go  tray.go  tray_stub.go  tray_test.go  tray_windows.go  virtual_desktop.go  virtual_desktop_stub.go  virtual_desktop_test.go  (+1 more)
python/: CLAUDE.md  Makefile  dump_tab_props.py  release.sh  start.pyw
python/tests/: test_keyboard.py  test_overlay.py  test_provider.py  test_tabs.py  test_virtual_desktop.py
src/windows_navigator/: __main__.py  activation.py  app.py  config.py  controller.py  favicons.py  filter.py  models.py  overlay.py  overlay_layout.py  provider.py  settings.py  tabs.py  theme.py  tray.py  virtual_desktop.py  wt_icons.py
tests/: test_activation.py  test_app.py  test_config.py  test_filter.py  test_keyboard.py  test_models.py  test_overlay.py  test_overlay_layout.py  test_provider.py  test_tabs.py  test_theme.py  test_tray.py  test_virtual_desktop.py  test_wt_icons.py
(+14 files in other folders)
